kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  name: wsprrs-web
  namespace: wsprrs
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: wsprrs
      app.kubernetes.io/component: web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wsprrs
        app.kubernetes.io/component: web
    spec:
      containers:
      - name: main
        image: IMAGE:TAG
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 1000m
            memory: 1Gi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
